hide overflow content in control bar ( fixes resize player demo )

--- a/skins/kdark/css/layout.css
+++ b/skins/kdark/css/layout.css
@@ -69,6 +69,7 @@
 
 .controlsContainer {
 	height: 2.1em;
+	overflow:hidden;
 }
 
 .btn {
